--- a/practica6/index.html
+++ b/practica6/index.html
@@ -103,7 +103,6 @@
       </div>
     </div>
     <div id="class">
-      <!-- Asientos en el aula -->
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
@@ -142,10 +141,8 @@
       <div class="seat"></div>
     </div>
   </div>
-
-  <!-- Display de temperatura -->
   <div id="temperature">Temperatura: 20°C</div>
-
+  <div>Temperatura: 20°C</div>
   <script>
     const fan = document.getElementById("fan");
     const seats = document.querySelectorAll(".seat");
